Api de pokemon, hice un trabajo

--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -8,6 +8,17 @@
          body {
             margin: 0;
          }
+
+         section {
+            margin: 10px;
+         }
+
+      .pokemon-propiedades {
+         margin: 10px;
+         padding: 10px;
+         border: 1px solid #000;
+         width: 300px;
+      }
          
       </style>
    </head>
@@ -16,6 +27,7 @@
          <input type="text" class="value-pokemon" />
          <button class="btn-pokemon">Get Pokemon</button>
       </section>
+      <div class="pokemon-propiedades"></div>
       <script src="script.js"></script>
    </body>
 </html>
