--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -23,11 +23,13 @@
       </style>
    </head>
    <body>
-      <section>
+      <!-- <section>
          <input type="text" class="value-pokemon" />
          <button class="btn-pokemon">Get Pokemon</button>
-      </section>
-      <div class="pokemon-propiedades"></div>
+      </section> -->
+      <!-- <div class="pokemon-propiedades"></div> -->
+       
+<script type="module" src="script.js"></script>
       <script src="script.js"></script>
    </body>
 </html>
