--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -28,6 +28,7 @@
          <button class="btn-pokemon">Get Pokemon</button>
       </section>
       <div class="pokemon-propiedades"></div>
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.6/dist/jquery.min.js"></script>
       <script src="script.js"></script>
    </body>
 </html>
