--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Interactivo</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="container">
-            <h1>Mi Portafolio</h1>
-            <button id="theme-toggle">🌙</button>
-            <nav>
-                <ul>
-                    <li><a href="#about">Sobre mí</a></li>
-                    <li><a href="#skills">Habilidades</a></li>
-                    <li><a href="#projects">Proyectos</a></li>
-                    <li><a href="#contact">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div class="container">
+        <h1>Mi Portafolio</h1>
+        <nav>
+          <ul>
+            <li><a href="#about">Sobre mí</a></li>
+            <li><a href="#skills">Habilidades</a></li>
+            <li><a href="#projects">Proyectos</a></li>
+            <li><a href="#contact">Contacto</a></li>
+          </ul>
+        </nav>
+        <div></div>
+      </div>
     </header>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#48e" fill-opacity="1" d="M0,192L40,176C80,160,160,128,240,138.7C320,149,400,203,480,192C560,181,640,107,720,80C800,53,880,75,960,90.7C1040,107,1120,117,1200,117.3C1280,117,1360,107,1400,101.3L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
     <main>
-        <section id="about" class="section">
-            <h2>Sobre mí</h2>
-            <p>Soy un programador apasionado por resolver problemas complejos con soluciones tecnológicas creativas.</p>
-        </section>
-        <section id="skills" class="section">
-            <h2>Habilidades</h2>
-            <div class="skills-container">
-                <div class="skill">HTML</div>
-                <div class="skill">CSS</div>
-                <div class="skill">JavaScript</div>
-                <div class="skill">React</div>
-                <div class="skill">Node.js</div>
-            </div>
-        </section>
-        <section id="projects" class="section">
-            <h2>Proyectos</h2>
-            <div id="projects-container" class="projects-container">
-                <!-- Los proyectos se generarán dinámicamente con JavaScript -->
-            </div>
-        </section>
-        <section id="contact" class="section">
-            <h2>Contacto</h2>
-            <form id="contact-form">
-                <input type="text" placeholder="Nombre" id="name" required>
-                <input type="email" placeholder="Correo electrónico" id="email" required>
-                <textarea placeholder="Mensaje" id="message" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-            <p id="form-feedback" style="display:none;"></p>
-        </section>
+      <section id="about" class="section">
+        <div class="contenedor">
+          <h2 class="titulo">Sobre mi<span class titulo2>&#160;</span></h1>
+        </div>
+        <p>
+          Soy un programador apasionado por resolver problemas complejos con
+          soluciones tecnológicas creativas.
+        </p>
+      </section>
+      <section id="skills" class="section">
+        <h2 class="titulos">Habilidades</h2>
+        <div class="skills-container">
+          <div class="skill">HTML</div>
+          <div class="skill">CSS</div>
+          <div class="skill">JavaScript</div>
+        </div>
+      </section>
+      <section id="projects" class="section">
+        <h2>Proyectos</h2>
+        <div id="projects-container" class="projects-container"></div>
+      </section>
+      <section id="contact" class="section">
+        <h2 class="titulos">Contacto</h2>
+        <form id="contact-form">
+          <input type="text" placeholder="Nombre" id="name" required />
+          <input
+            type="email"
+            placeholder="Correo electrónico"
+            id="email"
+            required
+          />
+          <textarea placeholder="Mensaje" id="message" required></textarea>
+          <button type="submit">Enviar</button>
+        </form>
+        <p id="form-feedback" style="display: none"></p>
+      </section>
     </main>
     <footer>
-        <p>&copy; 2025 Mi Portafolio</p>
+      <p>&copy; 2025 Mi Portafolio</p>
     </footer>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
