--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -9,7 +9,9 @@
   <body>
     <header>
       <div class="container">
-        <h1>Mi Portafolio</h1>
+        <div class="portafolio">
+        <h1>Gael Stolar</h1>
+        </div>
         <nav>
           <ul>
             <li><a href="#about">Sobre mí</a></li>
