--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -7,71 +7,73 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <div class="portafolio">
-        <h1>Gael Stolar</h1>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="#about">Sobre mí</a></li>
-            <li><a href="#skills">Habilidades</a></li>
-            <li><a href="#projects">Proyectos</a></li>
-            <li><a href="#contact">Contacto</a></li>
-          </ul>
-        </nav>
-        <div></div>
-      </div>
-    </header>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#48e" fill-opacity="1" d="M0,192L40,176C80,160,160,128,240,138.7C320,149,400,203,480,192C560,181,640,107,720,80C800,53,880,75,960,90.7C1040,107,1120,117,1200,117.3C1280,117,1360,107,1400,101.3L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
-    <main>
-      <section id="about" class="sobre-mi">
-        <div class="contenedor">
-          <div class="perfil">
-            <h2>Sobre mi<span class titulo2>&#160;</span></h1>
-              <img class= "perfil" src="WhatsApp Image 2025-01-22 at 16.54.36.jpeg" alt="">
-            </div>
-            <div class="separacion"></div>
-                <div class="info">
-                  <p>
-                    Soy un niño de 12 años que le gusta la programación y el diseño web. Acabo de terminar la primaria y estoy muy emocionado por aprender más sobre tecnología. 
-                    Me encanta crear sitios web interactivos y explorar nuevas herramientas y lenguajes de programación. 
-                    En mi tiempo libre, disfruto entrenando y jugando al futbol.
-                </p>
-                </div>
+    <div id="wrapper">
+      <header>
+        <div class="container">
+          <div class="portafolio">
+          <h1>Gael Stolar</h1>
           </div>
-      </section>
-      <section id="skills" class="habilidades">
-        <h2>Habilidades</h2>
-        <div class="skills-container">
-          <div class="skill">HTML</div>
-          <div class="skill">CSS</div>
-          <div class="skill">JavaScript</div>
+          <nav>
+            <ul>
+              <li><a href="#about">Sobre mí</a></li>
+              <li><a href="#skills">Habilidades</a></li>
+              <li><a href="#projects">Proyectos</a></li>
+              <li><a href="#contact">Contacto</a></li>
+            </ul>
+          </nav>
+          <div></div>
         </div>
-      </section>
-      <section id="projects" class="section">
-        <h2>Proyectos</h2>
-        <div id="projects-container" class="projects-container"></div>
-      </section>
-      <section id="contact" class="section">
-        <h2 class="titulos">Contacto</h2>
-        <form id="contact-form">
-          <input type="text" placeholder="Nombre" id="name" required />
-          <input
-            type="email"
-            placeholder="Correo electrónico"
-            id="email"
-            required
-          />
-          <textarea placeholder="Mensaje" id="message" required></textarea>
-          <button type="submit">Enviar</button>
-        </form>
-        <p id="form-feedback" style="display: none"></p>
-      </section>
-    </main>
-    <footer>
-      <p>&copy; 2025 Mi Portafolio</p>
-    </footer>
+      </header>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#48e" fill-opacity="1" d="M0,192L40,176C80,160,160,128,240,138.7C320,149,400,203,480,192C560,181,640,107,720,80C800,53,880,75,960,90.7C1040,107,1120,117,1200,117.3C1280,117,1360,107,1400,101.3L1440,96L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
+      <main>
+        <section id="about" class="sobre-mi">
+          <div class="contenedor">
+            <div class="perfil">
+              <h2>Sobre mi<span class titulo2>&#160;</span></h1>
+                <img class= "perfil" src="WhatsApp Image 2025-01-22 at 16.54.36.jpeg" alt="">
+              </div>
+              <div class="separacion"></div>
+                  <div class="info">
+                    <p>
+                      Soy un niño de 12 años que le gusta la programación y el diseño web. Acabo de terminar la primaria y estoy muy emocionado por aprender más sobre tecnología. 
+                      Me encanta crear sitios web interactivos y explorar nuevas herramientas y lenguajes de programación. 
+                      En mi tiempo libre, disfruto entrenando y jugando al futbol.
+                  </p>
+                  </div>
+            </div>
+        </section>
+        <section id="skills" class="habilidades">
+          <h2>Habilidades</h2>
+          <div class="skills-container">
+            <div class="skill">HTML</div>
+            <div class="skill">CSS</div>
+            <div class="skill">JavaScript</div>
+          </div>
+        </section>
+        <section id="projects" class="section">
+          <h2>Proyectos</h2>
+          <div id="projects-container" class="projects-container"></div>
+        </section>
+        <section id="contact" class="section">
+          <h2 class="titulos">Contacto</h2>
+          <form id="contact-form">
+            <input type="text" placeholder="Nombre" id="name" required />
+            <input
+              type="email"
+              placeholder="Correo electrónico"
+              id="email"
+              required
+            />
+            <textarea placeholder="Mensaje" id="message" required></textarea>
+            <button type="submit">Enviar</button>
+          </form>
+          <p id="form-feedback" style="display: none"></p>
+        </section>
+      </main>
+      <footer>
+        <p>&copy; 2025 Mi Portafolio</p>
+      </footer>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
