--- a/filereader + drag and drop/index.html
+++ b/filereader + drag and drop/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="zona-arrastre">Arrasre y suelte un archivo</div>
+    <div class="barra-de-carga"></div>
+    <div class="zona-arrastre">Arraste y suelte un archivo</div>
     <div class="resultado"></div>
     <script src="a.js"></script>
   </body>
